# kraken-python-client

./: .flake8  pyproject.toml
.github/workflows/: build-publish.yml  linting.yml
kraken/: client.py  test.py
tests/: test_kraken_client.py
