[project]
name = "kraken"
version = "0.1.0"
description = ""
authors = [
    {name = "Fisher60", email = "kyler@abandontech.cloud"},
]
dependencies = [
    "httpx>=0.25.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
